--- a/style.css
+++ b/style.css
@@ -1,1 +1,44 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+.container {
+  max-width: 1200px;
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: 5% 1fr 5%;
+  margin: auto;
+}
+header {
+  /* background-color: red; */
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  /* background-color: red; */
+  min-width: 100px;
+}
+a {
+  all: unset;
+  cursor: pointer;
+}
+main {
+  /* background-color: green; */
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 10px;
+  /* padding: 10px; */
+}
+footer {
+  /* background-color: blue; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
