--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+html,
 .container {
   max-width: 1200px;
   min-height: 100vh;
   display: grid;
-  grid-template-rows: 5% 1fr 5%;
+  grid-template-rows: 3% 1fr 3%;
   margin: auto;
 }
 header {
@@ -32,8 +32,9 @@ main {
   /* background-color: green; */
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  gap: 10px;
+  /* grid-template-rows: repeat(4, 1fr); */
+  grid-auto-rows: minmax(250px, auto);
+  gap: 15px;
   /* padding: 10px; */
 }
 footer {
@@ -41,4 +42,26 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.movie-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* background-color: rgba(255, 0, 0, 0.363); */
+  /* border-radius: 10px */
+}
+.movie-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.movie-info {
+  /* background-color: rebeccapurple; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 50px;
 }
